--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,11 @@
     <string name="check_connection">Verificando a conexão</string>
     <string name="login_sucess">Logado com suceso!</string>
     <string name="login_error">Não foi possível conectar a sua conta.</string>
+    <string name="profie">Perfil</string>
+    <string name="cards">Cartões</string>
+    <string name="transactions">Transações</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_new_card">NewCardActivity</string>
 </resources>
